# arcapi

./: .gitignore  MANIFEST.in  README.md  README.rst  makepage.sh  pyproject.toml  setup.py
arcapi/: __init__.py  __main__.py  config.py  handlers.py  index.html  ppns.py
arcapi/static/: index.html  index.md
arcapi/static/audit/: index.html
arcapi/static/audit/css/: app.0b59fece.css  app.998f4dad.css  app.cd0cc5e9.css
arcapi/static/audit/js/: about.5a2d100d.js  about.5a2d100d.js.map  app.0239092c.js  app.0239092c.js.map  app.0520d109.js  app.0520d109.js.map  app.07aabd85.js  app.07aabd85.js.map  app.213df84a.js  app.213df84a.js.map  app.37de4a0c.js  app.37de4a0c.js.map  app.6190afcc.js  app.6190afcc.js.map  app.6698ded8.js  app.6698ded8.js.map  (+8 more)
docker/: README.rst  docker-compose.yml
docker/api/: Dockerfile  config.yml  project_setup.sh  requirements.txt  run_arcapi.sh
docker/build-index/: buildmarcindex.py  createschema.py
docker/ubuntu-solr/: Dockerfile  configure_cores.sh  docker-compose.yml  download-solr.sh  shasum.txt
docker/ubuntu-solr/configs/: solr.xml  solrconfig.xml
example-client/: api_client.py  cli_client.py
gui3/: README.md  README.rst  package-lock.json  package.json
gui3/src/: App.vue
gui3/src/lib/: datastructures.ts  nli_helpers.ts
gui3/src/router/: index.ts
gui3/src/views/: Audit.vue  Home.vue
static/: index.html
static/css/: app.c6f119d4.css
static/js/: app.54a4b869.js  app.54a4b869.js.map  chunk-2d22d746.c46c9b88.js  chunk-2d22d746.c46c9b88.js.map  chunk-vendors.a05c6908.js  chunk-vendors.a05c6908.js.map
