[tool.poetry]
name = "arcapi"
version = "0.1.0"
description = ""
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
arc = "^1.0"
deromanize = "^0.9.0"
compose-struct = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
