[tool.black]
line-length = 79

[tool.poetry]
name = "arcapi"
version = "0.1.0"
description = ""
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arc = {git = "https://github.com/FID-Judaica/goethe-university-library-arc.git"}
compose-struct = {git = "https://github.com/ninjaaron/compose-struct.git"}
# libaaron = {git = "https://github.com/ninjaaron/libaaron.git"}
HspellPy = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
